// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Render WakaTime Card should render correctly 1`] = `
"
      <svg
        width="495"
        height="150"
        viewBox="0 0 495 150"
        fill="none"
        xmlns="http://www.w3.org/2000/svg"
        role="img"
        aria-labelledby="descId"
      >
        <title id="titleId"></title>
        <desc id="descId"></desc>
        <style>
          .header {
            font: 600 18px 'Segoe UI', Ubuntu, Sans-Serif;
            fill: #2f80ed;
            animation: fadeInAnimation 0.8s ease-in-out forwards;
          }
          @supports(-moz-appearance: auto) {
            /* Selector detects Firefox */
            .header { font-size: 15.5px; }
          }
          
    
    .stat {
      font: 600 14px 'Segoe UI', Ubuntu, "Helvetica Neue", Sans-Serif; fill: #434d58;
    }
    @supports(-moz-appearance: auto) {
      /* Selector detects Firefox */
      .stat { font-size:12px; }
    }
    .stagger {
      opacity: 0;
      animation: fadeInAnimation 0.3s ease-in-out forwards;
    }
    .not_bold { font-weight: 400 }
    .bold { font-weight: 700 }
  
    @keyframes slideInAnimation {
      from {
        width: 0;
      }
      to {
        width: calc(100%-100px);
      }
    }
    @keyframes growWidthAnimation {
      from {
        width: 0;
      }
      to {
        width: 100%;
      }
    }
    .lang-name { font: 400 11px 'Segoe UI', Ubuntu, Sans-Serif; fill: #434d58 }
    #rect-mask rect{
      animation: slideInAnimation 1s ease-in-out forwards;
    }
    .lang-progress{
      animation: growWidthAnimation 0.6s ease-in-out forwards;
    }
    

          
          
        </style>

        

        <rect
          data-testid="card-bg"
          x="0.5"
          y="0.5"
          rx="4.5"
          height="99%"
          stroke="#e4e2e2"
          width="494"
          fill="#fffefe"
          stroke-opacity="1"
        />

        
      <g
        data-testid="card-title"
        transform="translate(25, 35)"
      >
        <g transform="translate(0, 0)">
      <text
        x="0"
        y="0"
        class="header"
        data-testid="header"
      >WakaTime Stats (last 7 days)</text>
    </g>
      </g>
    

        <g
          data-testid="main-card-body"
          transform="translate(0, 55)"
        >
          
    <svg x="0" y="0" width="100%">
      <g transform="translate(0, 0)">
    <g class="stagger" style="animation-delay: 450ms" transform="translate(25, 0)">
      <text class="stat bold" y="12.5" data-testid="Other">Other:</text>
      <text
        class="stat"
        x="350"
        y="12.5"
      >19 mins</text>
      
    <svg width="220" x="110" y="4">
      <rect rx="5" ry="5" x="0" y="0" width="220" height="8" fill="#434d58"></rect>
      <svg data-testid="lang-progress" width="89.38%">
        <rect
            height="8"
            fill="#2f80ed"
            rx="5" ry="5" x="0" y="0"
            class="lang-progress"
            style="animation-delay: 750ms;"
        />
      </svg>
    </svg>
  
    </g>
  </g><g transform="translate(0, 25)">
    <g class="stagger" style="animation-delay: 600ms" transform="translate(25, 0)">
      <text class="stat bold" y="12.5" data-testid="TypeScript">TypeScript:</text>
      <text
        class="stat"
        x="350"
        y="12.5"
      >1 min</text>
      
    <svg width="220" x="110" y="4">
      <rect rx="5" ry="5" x="0" y="0" width="220" height="8" fill="#434d58"></rect>
      <svg data-testid="lang-progress" width="6.25%">
        <rect
            height="8"
            fill="#2f80ed"
            rx="5" ry="5" x="0" y="0"
            class="lang-progress"
            style="animation-delay: 900ms;"
        />
      </svg>
    </svg>
  
    </g>
  </g>
    </svg>
  
        </g>
      </svg>
    "
`;

exports[`Test Render WakaTime Card should render correctly with compact layout 1`] = `
"
      <svg
        width="495"
        height="115"
        viewBox="0 0 495 115"
        fill="none"
        xmlns="http://www.w3.org/2000/svg"
        role="img"
        aria-labelledby="descId"
      >
        <title id="titleId"></title>
        <desc id="descId"></desc>
        <style>
          .header {
            font: 600 18px 'Segoe UI', Ubuntu, Sans-Serif;
            fill: #2f80ed;
            animation: fadeInAnimation 0.8s ease-in-out forwards;
          }
          @supports(-moz-appearance: auto) {
            /* Selector detects Firefox */
            .header { font-size: 15.5px; }
          }
          
    
    .stat {
      font: 600 14px 'Segoe UI', Ubuntu, "Helvetica Neue", Sans-Serif; fill: #434d58;
    }
    @supports(-moz-appearance: auto) {
      /* Selector detects Firefox */
      .stat { font-size:12px; }
    }
    .stagger {
      opacity: 0;
      animation: fadeInAnimation 0.3s ease-in-out forwards;
    }
    .not_bold { font-weight: 400 }
    .bold { font-weight: 700 }
  
    @keyframes slideInAnimation {
      from {
        width: 0;
      }
      to {
        width: calc(100%-100px);
      }
    }
    @keyframes growWidthAnimation {
      from {
        width: 0;
      }
      to {
        width: 100%;
      }
    }
    .lang-name { font: 400 11px 'Segoe UI', Ubuntu, Sans-Serif; fill: #434d58 }
    #rect-mask rect{
      animation: slideInAnimation 1s ease-in-out forwards;
    }
    .lang-progress{
      animation: growWidthAnimation 0.6s ease-in-out forwards;
    }
    

          
          
        </style>

        

        <rect
          data-testid="card-bg"
          x="0.5"
          y="0.5"
          rx="4.5"
          height="99%"
          stroke="#e4e2e2"
          width="494"
          fill="#fffefe"
          stroke-opacity="1"
        />

        
      <g
        data-testid="card-title"
        transform="translate(25, 35)"
      >
        <g transform="translate(0, 0)">
      <text
        x="0"
        y="0"
        class="header"
        data-testid="header"
      >WakaTime Stats (last 7 days)</text>
    </g>
      </g>
    

        <g
          data-testid="main-card-body"
          transform="translate(0, 55)"
        >
          
    <svg x="0" y="0" width="100%">
      
      <mask id="rect-mask">
      <rect x="25" y="0" width="440" height="8" fill="white" rx="5" />
      </mask>
      
          <rect
            mask="url(#rect-mask)"
            data-testid="lang-progress"
            x="0"
            y="0"
            width="415.61699999999996"
            height="8"
            fill="#858585"
          />
        
          <rect
            mask="url(#rect-mask)"
            data-testid="lang-progress"
            x="415.61699999999996"
            y="0"
            width="29.0625"
            height="8"
            fill="#3178c6"
          />
        
      
    <g transform="translate(25, 25)">
      <circle cx="5" cy="6" r="5" fill="#858585" />
      <text data-testid="lang-name" x="15" y="10" class='lang-name'>
        Other - 19 mins
      </text>
    </g>
  
    <g transform="translate(230, 25)">
      <circle cx="5" cy="6" r="5" fill="#3178c6" />
      <text data-testid="lang-name" x="15" y="10" class='lang-name'>
        TypeScript - 1 min
      </text>
    </g>
  
    
    </svg>
  
        </g>
      </svg>
    "
`;

exports[`Test Render WakaTime Card should render correctly with compact layout when langs_count is set 1`] = `
"
      <svg
        width="495"
        height="115"
        viewBox="0 0 495 115"
        fill="none"
        xmlns="http://www.w3.org/2000/svg"
        role="img"
        aria-labelledby="descId"
      >
        <title id="titleId"></title>
        <desc id="descId"></desc>
        <style>
          .header {
            font: 600 18px 'Segoe UI', Ubuntu, Sans-Serif;
            fill: #2f80ed;
            animation: fadeInAnimation 0.8s ease-in-out forwards;
          }
          @supports(-moz-appearance: auto) {
            /* Selector detects Firefox */
            .header { font-size: 15.5px; }
          }
          
    
    .stat {
      font: 600 14px 'Segoe UI', Ubuntu, "Helvetica Neue", Sans-Serif; fill: #434d58;
    }
    @supports(-moz-appearance: auto) {
      /* Selector detects Firefox */
      .stat { font-size:12px; }
    }
    .stagger {
      opacity: 0;
      animation: fadeInAnimation 0.3s ease-in-out forwards;
    }
    .not_bold { font-weight: 400 }
    .bold { font-weight: 700 }
  
    @keyframes slideInAnimation {
      from {
        width: 0;
      }
      to {
        width: calc(100%-100px);
      }
    }
    @keyframes growWidthAnimation {
      from {
        width: 0;
      }
      to {
        width: 100%;
      }
    }
    .lang-name { font: 400 11px 'Segoe UI', Ubuntu, Sans-Serif; fill: #434d58 }
    #rect-mask rect{
      animation: slideInAnimation 1s ease-in-out forwards;
    }
    .lang-progress{
      animation: growWidthAnimation 0.6s ease-in-out forwards;
    }
    

          
          
        </style>

        

        <rect
          data-testid="card-bg"
          x="0.5"
          y="0.5"
          rx="4.5"
          height="99%"
          stroke="#e4e2e2"
          width="494"
          fill="#fffefe"
          stroke-opacity="1"
        />

        
      <g
        data-testid="card-title"
        transform="translate(25, 35)"
      >
        <g transform="translate(0, 0)">
      <text
        x="0"
        y="0"
        class="header"
        data-testid="header"
      >WakaTime Stats (last 7 days)</text>
    </g>
      </g>
    

        <g
          data-testid="main-card-body"
          transform="translate(0, 55)"
        >
          
    <svg x="0" y="0" width="100%">
      
      <mask id="rect-mask">
      <rect x="25" y="0" width="440" height="8" fill="white" rx="5" />
      </mask>
      
          <rect
            mask="url(#rect-mask)"
            data-testid="lang-progress"
            x="0"
            y="0"
            width="436.4025"
            height="8"
            fill="#858585"
          />
        
          <rect
            mask="url(#rect-mask)"
            data-testid="lang-progress"
            x="436.4025"
            y="0"
            width="30.503999999999998"
            height="8"
            fill="#3178c6"
          />
        
      
    <g transform="translate(25, 25)">
      <circle cx="5" cy="6" r="5" fill="#858585" />
      <text data-testid="lang-name" x="15" y="10" class='lang-name'>
        Other - 19 mins
      </text>
    </g>
  
    <g transform="translate(230, 25)">
      <circle cx="5" cy="6" r="5" fill="#3178c6" />
      <text data-testid="lang-name" x="15" y="10" class='lang-name'>
        TypeScript - 1 min
      </text>
    </g>
  
    
    </svg>
  
        </g>
      </svg>
    "
`;

exports[`Test Render WakaTime Card should render correctly with percent display format 1`] = `
"
      <svg
        width="495"
        height="150"
        viewBox="0 0 495 150"
        fill="none"
        xmlns="http://www.w3.org/2000/svg"
        role="img"
        aria-labelledby="descId"
      >
        <title id="titleId"></title>
        <desc id="descId"></desc>
        <style>
          .header {
            font: 600 18px 'Segoe UI', Ubuntu, Sans-Serif;
            fill: #2f80ed;
            animation: fadeInAnimation 0.8s ease-in-out forwards;
          }
          @supports(-moz-appearance: auto) {
            /* Selector detects Firefox */
            .header { font-size: 15.5px; }
          }
          
    
    .stat {
      font: 600 14px 'Segoe UI', Ubuntu, "Helvetica Neue", Sans-Serif; fill: #434d58;
    }
    @supports(-moz-appearance: auto) {
      /* Selector detects Firefox */
      .stat { font-size:12px; }
    }
    .stagger {
      opacity: 0;
      animation: fadeInAnimation 0.3s ease-in-out forwards;
    }
    .not_bold { font-weight: 400 }
    .bold { font-weight: 700 }
  
    @keyframes slideInAnimation {
      from {
        width: 0;
      }
      to {
        width: calc(100%-100px);
      }
    }
    @keyframes growWidthAnimation {
      from {
        width: 0;
      }
      to {
        width: 100%;
      }
    }
    .lang-name { font: 400 11px 'Segoe UI', Ubuntu, Sans-Serif; fill: #434d58 }
    #rect-mask rect{
      animation: slideInAnimation 1s ease-in-out forwards;
    }
    .lang-progress{
      animation: growWidthAnimation 0.6s ease-in-out forwards;
    }
    

          
          
        </style>

        

        <rect
          data-testid="card-bg"
          x="0.5"
          y="0.5"
          rx="4.5"
          height="99%"
          stroke="#e4e2e2"
          width="494"
          fill="#fffefe"
          stroke-opacity="1"
        />

        
      <g
        data-testid="card-title"
        transform="translate(25, 35)"
      >
        <g transform="translate(0, 0)">
      <text
        x="0"
        y="0"
        class="header"
        data-testid="header"
      >WakaTime Stats (last 7 days)</text>
    </g>
      </g>
    

        <g
          data-testid="main-card-body"
          transform="translate(0, 55)"
        >
          
    <svg x="0" y="0" width="100%">
      <g transform="translate(0, 0)">
    <g class="stagger" style="animation-delay: 450ms" transform="translate(25, 0)">
      <text class="stat bold" y="12.5" data-testid="Other">Other:</text>
      <text
        class="stat"
        x="350"
        y="12.5"
      >47.39 %</text>
      
    <svg width="220" x="110" y="4">
      <rect rx="5" ry="5" x="0" y="0" width="220" height="8" fill="#434d58"></rect>
      <svg data-testid="lang-progress" width="47.39%">
        <rect
            height="8"
            fill="#2f80ed"
            rx="5" ry="5" x="0" y="0"
            class="lang-progress"
            style="animation-delay: 750ms;"
        />
      </svg>
    </svg>
  
    </g>
  </g><g transform="translate(0, 25)">
    <g class="stagger" style="animation-delay: 600ms" transform="translate(25, 0)">
      <text class="stat bold" y="12.5" data-testid="TypeScript">TypeScript:</text>
      <text
        class="stat"
        x="350"
        y="12.5"
      >50.48 %</text>
      
    <svg width="220" x="110" y="4">
      <rect rx="5" ry="5" x="0" y="0" width="220" height="8" fill="#434d58"></rect>
      <svg data-testid="lang-progress" width="50.48%">
        <rect
            height="8"
            fill="#2f80ed"
            rx="5" ry="5" x="0" y="0"
            class="lang-progress"
            style="animation-delay: 900ms;"
        />
      </svg>
    </svg>
  
    </g>
  </g>
    </svg>
  
        </g>
      </svg>
    "
`;
